# BotPlusPlus

./: .gitignore  CMakeLists.txt  cspell.json  main.cpp
cmds/: anime.cpp  info.cpp  start.cpp
exception/: exception.cpp
schemas/: kitsu.hpp
utils/: anime.hpp  getuser.hpp  url.hpp
